# sockets_task

./: CMakeLists.txt  client.cpp  remarks.md  server.cpp
cli/: cli_client.cpp  cli_server.cpp
include/: client.h  client.hpp  client_cl.hpp  exceptions.hpp  i_client.h  i_client.hpp  server.hpp  server_cl.hpp  tcp_client.h  tcp_client.hpp  utils.hpp
sources/: client.cpp  client_cl.cpp  server.cpp  server_cl.cpp  tcp_client.cpp
test_server/: main.py
